[package]
name = "esabi"
version = "0.11.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>", "K. <kayo@illumium.org>"]
edition = "2021"
rust-version = "1.87"
license = "MIT"
readme = "README.md"
description = "High level bindings to the QuickJS JavaScript engine"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]
categories = ["api-bindings"]
repository = "https://github.com/DelSkayn/esabi.git"


[workspace]
members = [
  "sys",
  "core",
  "macro",
  "fixtures/boa-parity",
  "web/runner",
  "examples/native-module",
  "examples/module-loader",
  "examples/import-attributes",
  "examples/esabi-cli",
  "examples/class-methods",
  "examples/exotic",
]

[workspace.dependencies]
esabi-core = { version = "0.11.0", path = "core", default-features = false }
esabi-macro = { version = "0.11.0", path = "macro", default-features = false }
esabi-sys = { version = "0.11.0", path = "sys", default-features = false }
esabi = { version = "0.11.0", path = "./", default-features = false }

[dependencies]
indexmap-rs = { package = "indexmap", version = "2", optional = true }
either-rs = { package = "either", version = "1", optional = true }
esabi-core = { workspace = true }
esabi-macro = { workspace = true, optional = true }


[features]
default = ["std", "engine-quickjs"]

# Almost all features excluding "parallel" and support for async runtimes
full = [
  "engine-quickjs",
  "std",
  "chrono",
  "loader",
  "dyn-load",
  "either",
  "indexmap",
  "macro",
  "phf",
]

# A version of full designed for wasm32-wasip1 and wasm32-wasip2 (simply excludes dyn-load)
full-wasi = [
  "engine-quickjs",
  "std",
  "chrono",
  "loader",
  "either",
  "indexmap",
  "macro",
  "phf",
]

# Almost all features excluding "parallel"
full-async = ["full", "futures"]

# A version of full-async designed for wasm32-wasip1 and wasm32-wasip2
full-async-wasi = ["full-wasi", "futures"]

# Enable use of the rust standard library
std = ["esabi-core/std"]

# Select the JavaScript engine backend.
engine-quickjs = ["esabi-core/engine-quickjs"]
engine-boa = ["esabi-core/engine-boa"]

# Chrono support.
chrono = ["esabi-core/chrono"]

# Enable support for Either type
either = ["esabi-core/either", "either-rs"]

# Enable support for IndexMap and IndexSet types type
indexmap = ["esabi-core/indexmap", "indexmap-rs"]

# Enable support for perfect hash maps
phf = ["esabi-core/phf", "esabi-macro/phf"]

# Use bindgen to generate bindings at compile-time
# otherwise bundled bindings will be used
bindgen = ["engine-quickjs", "esabi-core/bindgen", "esabi-macro?/bindgen"]

# Enable support of parallel execution
parallel = ["esabi-core/parallel"]

# Enable user-defined module loader support
loader = ["esabi-core/loader"]

# Enable native module loading support
dyn-load = ["esabi-core/dyn-load"]

# Use Rust global allocator by default
# otherwise libc allocator will be used
rust-alloc = ["esabi-core/rust-alloc"]


# Enable helper macros
macro = ["esabi-macro"]

# Allows transferring objects between different contexts of the same runtime.
# Disabled for now as it can be used to create unsound code.
# multi-ctx = ["esabi-core/multi-ctx"]

# Enable hallf (f16) support
half = ["esabi-core/half"]

# Enable interop between Rust futures and JS Promises
futures = ["esabi-core/futures"]

# Enable QuickJS dumps for debug
dump-bytecode = ["engine-quickjs", "esabi-core/dump-bytecode"]
dump-gc = ["engine-quickjs", "esabi-core/dump-gc"]
dump-gc-free = ["engine-quickjs", "esabi-core/dump-gc-free"]
dump-free = ["engine-quickjs", "esabi-core/dump-free"]
# Dump JS values which still alive when runtime is freed
dump-leaks = ["engine-quickjs", "esabi-core/dump-leaks"]
dump-mem = ["engine-quickjs", "esabi-core/dump-mem"]
dump-objects = ["engine-quickjs", "esabi-core/dump-objects"]
dump-atoms = ["engine-quickjs", "esabi-core/dump-atoms"]
dump-shapes = ["engine-quickjs", "esabi-core/dump-shapes"]
dump-module-resolve = ["engine-quickjs", "esabi-core/dump-module-resolve"]
dump-promise = ["engine-quickjs", "esabi-core/dump-promise"]
dump-read-object = ["engine-quickjs", "esabi-core/dump-read-object"]

# Disable QuickJS assertions for faster performance
disable-assertions = ["engine-quickjs", "esabi-core/disable-assertions"]

# Enable compilation tests
compile-tests = ["esabi-core/compile-tests"]

# Enable unstable doc-cfg feature (for docs.rs)
doc-cfg = ["esabi-core/doc-cfg"]

# Deprecated features
classes = ["esabi-core/classes"]
array-buffer = ["esabi-core/array-buffer"]
allocator = ["esabi-core/allocator"]
properties = ["esabi-core/properties"]


[dev-dependencies]
boa-parity-fixtures = { path = "fixtures/boa-parity" }
trybuild = "1"

[package.metadata.docs.rs]
features = ["full-async", "parallel", "doc-cfg"]
