[package]
name = "esabi-core"
version = "0.11.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>", "K. <kayo@illumium.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "High level bindings to the QuickJS JavaScript engine"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]
categories = ["api-bindings"]
repository = "https://github.com/DelSkayn/esabi.git"

[package.metadata.docs.rs]
features = ["full-async", "doc-cfg"]

[dependencies]
esabi-sys = { workspace = true, optional = true }
boa_engine = { version = "0.21.0", optional = true }
hashbrown = { version = "0.17" }
phf = { version = "0.13", optional = true }
indexmap = { version = "2", optional = true }
either = { version = "1", optional = true }
async-lock = { version = "3", optional = true, default-features = false }
chrono = { version = "0.4", optional = true }
dlopen2 = { version = "0.8", optional = true }
relative-path = { version = "2.0", optional = true, default-features = false, features = [
  "alloc",
] }
half = { version = "2.7.1", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Enable getrandom's JavaScript backend for Boa's rand dependency chain on wasm32-unknown-unknown.
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"

[dev-dependencies]
futures-rs = { package = "futures", version = "0.3" }
tokio = { version = "1", default-features = false, features = [
  "rt",
  "time",
  "macros",
  "sync",
] }
esabi = { path = "../" }
approx = "0.5"
trybuild = "1"

[features]
default = ["std", "engine-quickjs"]

std = ["relative-path?/std"]

# Select the JavaScript engine backend.
engine-quickjs = ["dep:esabi-sys"]
engine-boa = ["std", "dep:boa_engine"]

# Almost all features excluding "parallel" and support for async runtimes
full = [
  "engine-quickjs",
  "std",
  "chrono",
  "loader",
  "dyn-load",
  "either",
  "indexmap",
  "half",
]

# Almost all features excluding "parallel"
full-async = ["full", "futures"]

# Enable conversion of chrono types to/from JS
chrono = ["dep:chrono"]

# Use bindgen to generate bindings at compile-type
# otherwise bundled bindings will be used
bindgen = ["engine-quickjs", "esabi-sys/bindgen"]

# Enable support of parallel execution
parallel = ["std", "tokio/rt-multi-thread"]

# Enable user-defined module loader support
loader = ["relative-path"]

# Enable native module loading support
dyn-load = ["loader", "dlopen2"]

# Use Rust global allocator by default
# otherwise libc allocator will be used
rust-alloc = []

# Enable user-defined classes support

# Enable half (f16) support

half = ["dep:half"]

# Enable interop between Rust futures and JS Promises
futures = ["dep:async-lock"]

# Allows transferring objects between different contexts of the same runtime.
multi-ctx = []

# Enable QuickJS dumps for debug
dump-bytecode = ["engine-quickjs", "esabi-sys/dump-bytecode"]
dump-gc = ["engine-quickjs", "esabi-sys/dump-gc"]
dump-gc-free = ["engine-quickjs", "esabi-sys/dump-gc-free"]
dump-free = ["engine-quickjs", "esabi-sys/dump-free"]
# Dump JS values which still alive when runtime is freed
dump-leaks = ["engine-quickjs", "esabi-sys/dump-leaks"]
dump-mem = ["engine-quickjs", "esabi-sys/dump-mem"]
dump-objects = ["engine-quickjs", "esabi-sys/dump-objects"]
dump-atoms = ["engine-quickjs", "esabi-sys/dump-atoms"]
dump-shapes = ["engine-quickjs", "esabi-sys/dump-shapes"]
dump-module-resolve = ["engine-quickjs", "esabi-sys/dump-module-resolve"]
dump-promise = ["engine-quickjs", "esabi-sys/dump-promise"]
dump-read-object = ["engine-quickjs", "esabi-sys/dump-read-object"]

# Disable QuickJS for faster performance
disable-assertions = ["engine-quickjs", "esabi-sys/disable-assertions"]

# Enable compilation tests
compile-tests = []

# Enable unstable doc-cfg feature (for docs.rs)
doc-cfg = []

# Deprecated features
properties = []
classes = []
array-buffer = []
allocator = []
