[package]
name = "native-module"
version = "0.11.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.esabi]
path = "../.."
default-features = false
features = ["futures", "rust-alloc", "std"]

[features]
default = ["macro"]
macro = ["esabi/macro"]
