[package]
name = "boa-playground-runner"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
boa-parity-fixtures = { path = "../../fixtures/boa-parity" }
esabi = { path = "../..", default-features = false, features = ["std", "engine-boa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
